Revision history for Game-Theory-TwoPersonMatrix

{{$NEXT}}
    - Made mm_tally() honor non-zero-sum games.
    - Improved documentation.

0.13  2014-12-20 12:12:27
    - Added mm_tally().
    - Improved documentation.

0.1202 2014-12-19
    - Improved documentation.

0.1201 2014-12-19
    - Fixed strategy pruning logic in *reduce().

0.12  2014-12-19
    - Split reduce() into row & col reduce() methods.

0.11  2014-12-19
    - Added reduce() game reduction by strictly dominated rows or columns.

0.10  2014-12-17
    - Added oddments() computation for 2x2 games.

0.09  2014-12-15
    - Implemented saddlepoint computation for strictly domainated games.

0.0801 2014-12-14
    - Fixed documented examples with crucial parens.
    - Added minimx and maximin examples in eg/

0.08  2014-12-11
    - Implemented counter_strategy()

0.07  2014-12-10
    - Correctly enabled expected_value()
    - Added tests from the cited textbook examples

0.06  2014-12-10
    - Stripped down everything and starting over...

0.05  2014-12-10
    - Added tests for mixed().
    - Added the player_strategy() method, tests and docs.
    - Added expected_value()

0.04  2014-11-18
    - Re-added mixed() and Math::Calculus::* deps.

0.03  2014-08-30
    - Improved documentation.
    - Removed the broken dependency on the missing Math::Calculus::Expression module.

0.0201 2014-02-02
    - Enhanced documentation!

0.02  2014-02-02
    - Implemented optimal strategy equation computation via probabilities over
      combined opponent strategic utilities.

0.0101 2014-01-29
    - Improved documentation
    - Added tests for negative utilities

0.01  2014-01-28
    - Documented the thing!
    - Moved functionality from script subs to module methods
    - Minted by Dist::Zilla