@@ -130,4 +130,18 @@ is_deeply $g->mm_tally, {
     2 => { strategy => [0,1], value => 3 }
 }, 'mm_tally';
 
+$g = Game::Theory::TwoPersonMatrix->new(
+    payoff1 => [ [-5,-15],[0,-10] ],
+    payoff2 => [ [-5,0],[-15,-10] ],
+);
+isa_ok $g, 'Game::Theory::TwoPersonMatrix', '2x2';
+is_deeply $g->pareto_optimal, { "0,0" => [-5,-5] }, 'pareto_optimal';
+
+$g = Game::Theory::TwoPersonMatrix->new(
+    payoff1 => [ [2,3],[2,1] ],
+    payoff2 => [ [3,5],[2,3] ],
+);
+isa_ok $g, 'Game::Theory::TwoPersonMatrix', '2x2';
+is_deeply $g->pareto_optimal, { "0,0" => [2,3], "0,1" => [3,5] }, 'pareto_optimal';
+
 done_testing();
